# roblox-studio-cli

./: Cargo.toml  foreman.toml
.github/workflows/: ci.yml  install.py
src/: credentials.rs  main.rs  studio.rs
