[package]
name = "roblox-studio-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rbx_cookie = "0.1.2"
keyring = "2.0.2"
clap = { version = "4.2.5", features = ["derive"] }

cookie = "0.15.1"
dirs = "1.0.4"
log = "0.4.14"
env_logger = "0.9.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincred", "impl-default"] }
